# backend/src/models/bottomcomment.js
@@ -6,11 +6,11 @@ const { mongoose } = require('../configs/dbConnection')
 
 //? Bottom Comment Model
 const bottomCommentSchema = new mongoose.Schema({
-    userId: { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true, index: true },
-
     commentId: { type: mongoose.Schema.Types.ObjectId, ref: 'Comment', required: true, index: true },
 
-    comment: { type: String, required: true, trim: true },
+    userId: { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true, index: true },
+
+    bottomComment: { type: String, required: true, trim: true },
 },
     { collection: 'bottomcomments', timestamps: true })
 
