# backend/src/models/comment.js
@@ -6,13 +6,13 @@ const { mongoose } = require('../configs/dbConnection')
 
 //? Comment Model
 const commentSchema = new mongoose.Schema({
-    userId: { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true, index: true },
-    
     blogId: { type: mongoose.Schema.Types.ObjectId, ref: 'Blog', required: true, index: true },
 
-    comment: { type: String, required: true, trim: true },
+    userId: { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true, index: true },
     
-    bottomcomments: [{ type: mongoose.Schema.Types.ObjectId, ref: 'BottomComment' }],
+    bottomCommentsId: [{ type: mongoose.Schema.Types.ObjectId, ref: 'BottomComment' }],
+
+    comment: { type: String, required: true, trim: true },
 },
     { collection: 'comments', timestamps: true })
 
